Deployment/pdsbe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-be-service
spec:
  selector:
    app: test-be
  ports:
    - port: 8000
      targetPort: 8000
