Deployment/pdsfe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-fe-service
spec:
  selector:
    app: test-fe
  ports:
    - port: 80
      targetPort: 80
