Deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: app.test.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: test-be-service
                port:
                  number: 8000
          - path: /ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: test-fe-service
                port:
                  number: 80
